<resources>
    <string name="geofence_enter">Entrando na Região %1$s</string>
    <string name="geofence_dwell">Dwelling in %1$s</string>
    <string name="geofence_exit">Saindo na Região %1$s</string>
    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="transition">Transition</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">App registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">Too many PendingIntents provided</string>
    <string name="unknown_geofence_error">Unknown error</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="fb_app_id">299465907183064</string>
    <string name="fb_app_secret">90acb762bb9c9a6fdce990bb3680d98a</string>
    <string name="facebook_app_id">299465907183064</string>
    <string name="fb_login_protocol_scheme">fb299465907183064</string>
    <string name="SCREEN_TITLE_MAIN">One Internacional</string>
    <string name="SCREEN_TITLE_ABOUT">About the One Internacional</string>
    <string name="SCREEN_TITLE_LOGIN">Login</string>
    <string name="SCREEN_TITLE_RESET_PASSWORD">Recover Password</string>
    <string name="SCREEN_TITLE_REMOVE_GALLERY">Remove images.</string>
    <string name="SCREEN_TITLE_SIGNUP">Signup</string>
    <string name="SCREEN_TITLE_LIST_PICKER">List</string>
    <string name="SCREEN_TITLE_EVENT_DETAIL">Event</string>
    <string name="SCREEN_TITLE_EVENT_TABS">Events</string>
    <string name="SCREEN_TITLE_EDIT_PROFILE">Edit Profile</string>
    <string name="SCREEN_TITLE_CHANGE_PASSWORD">Reset Password</string>
    <string name="SCREEN_TITLE_CHAT">Chat</string>
    <string name="SCREEN_TITLE_SEARCH_CHAT">New chat</string>
    <string name="SCREEN_TITLE_PARTICIPANTS">Participants</string>
    <string name="SCREEN_TITLE_NOTIFICATIONS">Notifications</string>
    <string name="SCREEN_TITLE_ORDER">Orders</string>
    <string name="SCREEN_TITLE_PRODUCT_REF">Search by reference</string>
    <string name="SCREEN_TITLE_PRODUCT">Product</string>
    <string name="SCREEN_TITLE_MY_ORDER">My Orders</string>
    <string name="SCREEN_TITLE_DEALER_SIGNUP">Dealer signup</string>
    <string name="SCREEN_TITLE_CATALOG">Catalogs</string>
    <string name="SCREEN_TITLE_CATALOG_PRODUCTS">Products</string>
    <string name="SCREEN_TITLE_BOLETO">Ticket</string>
    <string name="SCREEN_TITLE_CATALOG_CATEGORY">Catalogs - Categories</string>
    <string name="SCREEN_TITLE_MY_POINTS">My Points</string>
    <string name="SCREEN_CHECKOUT">Online Payment</string>
    <string name="SCREEN_TITLE_POINTS">Points</string>
    <string name="SCREEN_POINTS_POINTS">points</string>
    <string name="SCREEN_POINTS_EVENT_LINE">Event:</string>
    <string name="SCREEN_POINTS_DATE_LINE">Date:</string>
    <string name="SCREEN_POINTS_TITLE_INFORMATION">Points requerid for lottery %d</string>
    <string name="SCREEN_POINTS_TITLE_CONGRATULATIONS">Congratulations, you are participating in the lottery</string>
    <string name="SCREEN_POINTS_TITLE_TARGET">%d points left to participate in the lottery</string>
    <string name="SCREEN_TITLE_INFORMATION">Information</string>
    <string name="SCREEN_TITLE_DOCUMENTS_TABS">Documents</string>
    <string name="SCREEN_SHOWCASE">Showcase</string>
    <string name="SCREEN_MANAGER_APPLICATION">Manager Application</string>
    <string name="LABEL_MY_DOCUMENTS">My Documents</string>
    <string name="LABEL_ALL_DOCUMENTS">All</string>
    <string name="MESSAGE_ACTIVITY_INDICATOR_LOADING">Loading, please wait...</string>
    <string name="LABEL_WELCOME">Welcome!</string>
    <string name="LABEL_TEXT_ONE_ITEM_SELECTED">item selected</string>
    <string name="LABEL_TEXT_MANY_ITEMS_SELECTED">items selected</string>
    <string name="PLACEHOLDER_NAME">Name</string>
    <string name="PLACEHOLDER_OFFICE">Office</string>
    <string name="PLACEHOLDER_EMAIL">E-mail</string>
    <string name="PLACEHOLDER_SEARCH_PRODUCT">Search product</string>
    <string name="PLACEHOLDER_PASSWORD">Password</string>
    <string name="PLACEHOLDER_NEW_PASSWORD">New Password</string>
    <string name="PLACEHOLDER_FULLNAME">Name</string>
    <string name="PLACEHOLDER_LASTNAME">Last name</string>
    <string name="PLACEHOLDER_COMPANY">Empresa</string>
    <string name="PLACEHOLDER_SECTOR">Job</string>
    <string name="PLACEHOLDER_NUMBER">Number</string>
    <string name="PLACEHOLDER_COMPLEMENT">Complement</string>
    <string name="PLACEHOLDER_NEIGHBORHOOD">Neighborhood</string>
    <string name="PLACEHOLDER_CITY">City</string>
    <string name="PLACEHOLDER_CPF">CPF</string>
    <string name="PLACEHOLDER_CNPJ">CNPJ</string>
    <string name="PLACEHOLDER_REGION">Provincy</string>
    <string name="PLACEHOLDER_ROLE">Job</string>
    <string name="PLACEHOLDER_PHONE">Phone number</string>
    <string name="PLACEHOLDER_INTEREST">Areas of interest</string>
    <string name="PLACEHOLDER_ADDRESS">Address</string>
    <string name="PLACEHOLDER_ZIPCODE">Zipcode</string>
    <string name="ERROR_ALERT_MESSAGE_NO_CONNECTION">No internet connection.</string>
    <string name="ERROR_ALERT_UNKNOWN">An error has occurred, please try again..</string>
    <string name="ERROR_ALERT_UNAUTHORIZED">Session expired! Please sign in again..</string>
    <string name="ERROR_ALERT_MESSAGE_EMAIL_INVALID">Invalid e-mail</string>
    <string name="ERROR_ALERT_MESSAGE_CODE_INVALID">Código inválido</string>
    <string name="ERROR_ALERT_MESSAGE_EMAIL_SERVER">This email has already been registered</string>
    <string name="ERROR_ALERT_MESSAGE_PASSWORD_INVALID">Invalid password</string>
    <string name="ERROR_ALERT_MESSAGE_PASSWORD_INVALID_2">Invalid password</string>
    <string name="ERROR_ALERT_MESSAGE_PASSWORD_SERVER">Password must be between 8 and 14 characters</string>
    <string name="ERROR_ALERT_MESSAGE_NETWORK_REQUEST">Error during request. Try again.</string>
    <string name="ERROR_ALERT_MESSAGE_NOT_FOUND">The promotional code you entered does not exist or the features for the promotional card are not all currently available Please try again later or insert a new code.</string>
    <string name="ERROR_ALERT_MESSAGE_DISK_SAVE">Error during attempt to create file.</string>
    <string name="ERROR_ALERT_MESSAGE_SECTOR_NULL">Select one sector first</string>
    <string name="ERROR_ALERT_REQUIRED_FIELD">Required Field</string>
    <string name="ERROR_ALERT_MESSAGE_AUTHENTICATION">Couldn\'t verify login. Check your code and password.</string>
    <string name="ERROR_ALERT_MESSAGE_AUTHENTICATION_RESELLER">Couldn\'t verify login. Check your CPF and phone.</string>
    <string name="BUTTON_TITLE_TRY_AGAIN">Try again</string>
    <string name="BUTTON_TITLE_ACCESS">ACCESS</string>
    <string name="BUTTON_TITLE_FORGOT_PWD">FORGOT PASSWORD?</string>
    <string name="BUTTON_TITLE_SIGNUP_LOGIN">Sign Up</string>
    <string name="BUTTON_TITLE_SIGNUP">SAVE</string>
    <string name="BUTTON_TITLE_FACEBOOK"><b>Log in</b> with <b>Facebook</b></string>
    <string name="ALERT_MESSAGE_FORGOT_PASSWORD">Insert the e-mail associated to your account.</string>
    <string name="ALERT_MESSAGE_REMOVE_GALLERY">Do you really want to remove the images from the gallery?</string>
    <string name="ALERT_OPTION_CONFIRM">OK</string>
    <string name="ALERT_OPTION_EDIT">Edit</string>
    <string name="ALERT_OPTION_RESET_PWD">Send</string>
    <string name="ALERT_OPTION_CANCEL">Cancel</string>
    <string name="ALERT_OPTION_TAKE_PHOTO">Take photo</string>
    <string name="ALERT_OPTION_PICK_PHOTO">Open Gallery</string>
    <string name="ALERT_TITLE_PICK_PHOTO">Pick photo</string>
    <string name="ALERT_MESSAGE_PICK_PHOTO">Take a photo or pick image from gallery.</string>
    <string name="ALERT_MESSAGE_SELECT">Select one option</string>
    <string name="ERROR_ALERT_MESSAGE_FACEBOOK">Couldn\'t connect through Facebook. Try again.</string>
    <string name="title_activity_teste">teste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="LABEL_DEVELOPED_BY">Developed by </string>
    <string name="LABEL_EVENTS">Events</string>
    <string name="LABEL_PARTNERS">Sponsors</string>
    <string name="LABEL_TEAM">Team</string>
    <string name="LABEL_CAM">Scanner</string>
    <string name="BUTTON_TITLE_HOME">Home</string>
    <string name="BUTTON_TITLE_MY_PROFILE">My profile</string>
    <string name="BUTTON_TITLE_MY_AGENDA">My agenda</string>
    <string name="BUTTON_TITLE_ABOUT">About</string>
    <string name="BUTTON_TITLE_EXIT">Exit</string>
    <string name="LABEL_EMPTY_EVENTS">No event available</string>
    <string name="LABEL_SELECTED">Selected</string>
    <string name="LABEL_REGISTERED">Registered</string>
    <string name="LABEL_SIGNUP">Sign Up</string>
    <string name="LABEL_CURRENT_DAY">Today</string>
    <string name="title_activity_events_tab">Events</string>
    <string name="title_activity_equip">Teams</string>
    <string name="LABEL_LIST">List</string>
    <string name="LABEL_CALENDAR">Calendar</string>
    <string name="BUTTON_TITLE_MENU_GENERAL_SURVEY">General Survey</string>
    <string name="BUTTON_TITLE_MENU_SPECIFIC_SURVEY">Specific Survey</string>
    <string name="LABEL_LOAD_SURVEY">Loading Survey...</string>
    <string name="ALERT_NO_ROLES_REGISTER">There are no registered roleObjects</string>
    <string name="BUTTON_TITLE_ORDER">Order</string>
    <string name="BUTTON_TITLE_SENDORDER">Send Order</string>
    <string name="BUTTON_TITLE_CHECK_ORDER">Check Order</string>
    <string name="BUTTON_TITLE_CATALOG">Catalog</string>
    <string name="BUTTON_TITLE_INSURANCE">Buy Insurance</string>
    <string name="BUTTON_TITLE_CANDIDATES">Candidates</string>
    <string name="PLACEHOLDER_SINOPSE">INFORMATION</string>
    <string name="PLACEHOLDER_DATETIME">DATE | TIME</string>
    <string name="PLACEHOLDER_LOADING">Loading...</string>
    <string name="BUTTON_TITLE_FAVORITE">SING UP</string>
    <string name="PLACEHOLDER_LOCAL">LOCAL</string>
    <string name="BUTTON_TITLE_REMOVE_FAVORITE">Remove register</string>
    <string name="SCREEN_TITLE_MY_AGENDA">My Agenda</string>
    <string name="DIALOG_TITLE_SUCCESS_UNREGISTER">Success</string>
    <string name="DIALOG_TITLE_PERMISSION">Permissions are required</string>
    <string name="DIALOG_BLUETOOTH_MESSAGE_PERMISSION">Allow access to Bluetooth.</string>
    <string name="DIALOG_COARSE_LOCATION_MESSAGE_PERMISSION">Allow access to Localization.</string>
    <string name="DIALOG_SCANNER_MESSAGE_PERMISSION">To continue, please allow access to Camera, GPS and phone state configuration.</string>
    <string name="DIALOG_PROFILE_MESSAGE_PERMISSION">To continue, please allow access to Camera and Read and Write external storage.</string>
    <string name="DIALOG_PHONE_STATE_MESSAGE_PERMISSION">To continue, please allow access to Phone state.</string>
    <string name="DIALOG_POST_MESSAGE_PERMISSION">To continue, please allow access to Camera, Read and Write external storage, GPS and phone state.</string>
    <string name="BUTTON_TITLE_CHANGE_PASSWORD">RESET PASSWORD</string>
    <string name="BUTTON_TITLE_EDIT_PROFILE">Save Profile</string>
    <string name="MESSAGE_UPDATE_USER_SUCCESS">Profile updated successfully!</string>
    <string name="BUTTON_TITLE_SAVE_PASSWORD">RESET</string>
    <string name="DIALOG_MESSAGE_PERMISSION">To continue is necessary allow access to Camera, GPS and phone state configuration.</string>
    <string name="ACTION_SHARE">Share</string>
    <string name="LIKE">Like</string>
    <string name="UNLIKE">Unlike</string>
    <string name="COMMENT">Comment</string>
    <string name="DELETE_POST">Delete Post</string>
</resources>