<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_like"
        android:orderInCategory="100"
        android:title="@string/LIKE"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_unlike"
        android:orderInCategory="100"
        android:title="@string/UNLIKE"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_comment"
        android:orderInCategory="100"
        android:title="@string/COMMENT"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/ACTION_SHARE"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete_post"
        android:orderInCategory="100"
        android:title="@string/DELETE_POST"
        app:showAsAction="ifRoom"/>

   <!-- <item
        android:id="@+id/action_report_post"
        android:orderInCategory="100"
        android:title="@string/REPORT_POST"
        app:showAsAction="ifRoom"/>-->

<!--
    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="100"
        android:title="@string/ALERT_OPTION_CANCEL"
        app:showAsAction="ifRoom"/>
-->

</menu>